# docudialogue

./: .env  .gitignore  README.md  config.json  document_pipeline.py  inference.ipynb  pyproject.toml  requirements.txt  test.ipynb  todo.txt  utils.py
dialog_generator/src/dialog_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dialog_generator/src/dialog_generator/graphs/: community.py  community_group.py  graph_utils.py  knowledge_graph.py  triplet_handler.py
dialog_generator/src/dialog_generator/triplet_extraction/: triplet_extractor.py
dialog_generator/src/dialog_generator/visualization/: visualize.py
docudialogue/src/docudialogue/: document_pipeline.py  utils.py
docudialogue/src/docudialogue/graphs/: community.py  community_group.py  graph_utils.py  knowledge_graph.py  triplet_handler.py
docudialogue/src/docudialogue/input_handler/: input_pipeline.py
docudialogue/src/docudialogue/llm_wrappers/: llm_wrappers.py  prompts.py  pydantic_classes.py
docudialogue/src/docudialogue/triplet_extraction/: entity_extractor.py  relationship_extractor.py  (+1 more)
graphs/: community.py  community_group.py  graph.py  graph_utils.py  knowledge_graph.py  triplet_handler.py
graphs/knowledge_graph/: knowledge_graph.py
input_handler/: input_pipeline.py
llm_wrappers/: llm_wrappers.py  prompts.py
triplet_extraction/: classes.py  config.json  entity_extractor.py  llm_wrappers.py  prompts.py  pydantic_classes.py  relationship_extractor.py  triplet_extractor.py
visualization/: graph_plot_data_utils.py  visualization_utils.py  visualize.py
(+3 files in other folders)
